# NotificationService

./: .pre-commit-config.yaml  Dockerfile  README.md  __main__.py  example.java  pyproject.toml
.github/workflows/: linter.yml  tests.yml
src/application/: __init__.py
src/application/services/: notification_service.py
src/application/services/exceptions/: notification_service_exceptions.py
src/domain/: email_type.py
src/infrastructure/adapters/: gateway.py  local_user_data.py
tests/: conftest.py
tests/adapters/: local_user_data_test.py
tests/services/: notification_service_test.py
