[tool.poetry]
name = "notificationservice"
version = "0.1.0"
description = "Modak interview project"
authors = ["Letícia Oliveira <leticia164_@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
mypy = "^1.11.2"
flake8 = "^7.1.1"
coverage = "^7.6.1"
isort = "^5.13.2"
autoflake = "^2.3.1"
pylint = "^3.3.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
